# magic_installer_rust

./: Cargo.toml  unused_functions.txt
src/: file_handling.rs  lib.rs  main.rs  test.rs  ui.rs
