[package]
name = "magic_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
native-windows-derive = "1.0.5"
native-windows-gui = "1.0.13"
reqwest = {version="0.11.14", features=["blocking"]}
tokio = {version="1.24.2", features=["full"]}
winapi = "0.3.9"
zip = "0.6.3"
